# aes-fpga-rs

./: README.md
fpga/: .gitignore  add_key.v  aes.v  aes.xpr  aes_tb.v  main.v  mix_column.v  mix_columns.v  mod_tb.v  sbox.v  shift_column.v  shift_rows.v  sm.pcf
fpga/aes.srcs/constrs_1/imports/Downloads/: Cmod-A7-Master.xdc
fpga/aes.srcs/sources_1/imports/fpga/: add_key.v  aes.v  aes_tb.v  key.v  main.v  round.v  sbox.v  shift_byte.v
prototype/: main.py  pyproject.toml
prototype/prototype/: tables.py
prototype/tests/: test_aes.py  test_expand_key_128.py  test_expand_key_192.py  test_expand_key_256.py  test_main.py  test_mix_column.py  test_shift_row.py
